# sortphoto

./: Cargo.toml  LICENSE  README.txt  package-lock.json  sh.valk.SortPhoto.yml
.github/: dependabot.yml
.github/workflows/: check.yml  deploy.yml  linux.yml  mac.yml  windows.yml
apple-package/: .gitignore  build.sh
apple-package/bundle/Contents/: Info.plist
apple-package/bundle/Contents/Resources/: sortphoto.icns
packaging/linux/: Dockerfile  build.sh
packaging/linux/SortPhoto.AppDir/: AppRun  SortPhoto.desktop
packaging/mac/: build.sh
packaging/mac/bundle/Contents/MacOS/: .gitignore
src/: hashing.rs  lib.rs  main.rs  walker.rs
