[package]
name = "sortphoto"
version = "0.1.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "An app to sort your photos by when they were taken."

[dependencies]
kamadak-exif = "0.5"
eframe = { version = "0.20", features = ["dark-light"] }
rfd = "0.10"
thiserror = "1.0"
opener = "0.5"
blake3 = { version = "1.3", features = ["rayon"] }
watch = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.4"