[package]
name = "sortphoto"
version = "0.1.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "An app to sort your photos by when they were taken."

[dependencies]
kamadak-exif = "0.5"
eframe = "0.29"
rfd = "0.13"
thiserror = "1"
opener = "0.6"
blake3 = { version = "1.5", features = ["rayon"] }
watch = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5"