[package]
name = "sortphoto"
version = "0.1.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "An app to sort your photos by when they were taken."

[dependencies]
blake3 = { version = "1", features = ["rayon"] }
tracing-subscriber = "0.3"
kamadak-exif = "0.6"
thiserror = "1"
tracing = "0.1"
eframe = "0.29"
opener = "0.7"
watch = "0.2"
rfd = "0.15"